--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=dc3571f5a0e73c936c57",
+    "/css/app.css": "/css/app.css?id=c550d49f6d713f58564c"
 }
