--- a/serverless.yml
+++ b/serverless.yml
@@ -37,3 +37,23 @@ functions:
 plugins:
     # We need to include the Bref plugin
     - ./vendor/bref/bref
+
+resources:
+    Resources:
+        # The S3 bucket that stores the assets
+        Assets:
+            Type: AWS::S3::Bucket
+            Properties:
+                BucketName: assets-serverless
+        # The policy that makes the bucket publicly readable
+        AssetsBucketPolicy:
+            Type: AWS::S3::BucketPolicy
+            Properties:
+                Bucket: !Ref Assets # References the bucket we defined above
+                PolicyDocument:
+                    Statement:
+                        -   Effect: Allow
+                            Principal: '*' # everyone
+                            Action: 's3:GetObject' # to read
+                            Resource: !Join ['/', [!GetAtt Assets.Arn, '*']] # things in the bucket
+                            # alternatively you can write out Resource: 'arn:aws:s3:::<bucket-name>/*'
